Add new projects

--- a/index.html
+++ b/index.html
@@ -205,6 +205,54 @@
 													</div>
 												</div>
 											</a>
+											<a href="https://www.youtube.com/watch?v=087ueZO1ZVQ" class="project-item">
+												<img src="images/087ueZO1ZVQ-HD.jpg" alt="2D Simple Dungeon Crawler">
+												<div class="project-overlay">
+													<div class="project-title-container">
+														<span class="project-title">2D Simple Dungeon Crawler</span>
+													</div>
+													<div class="project-icons">
+														<img src="images\\icons8-c-sharp-logo.svg" alt="C#" class="project-icon">
+														<span class="project-tag">Custom Game Engine</span>
+													</div>
+												</div>
+											</a>
+											<a href="https://youtu.be/jFrCjPldWBY" class="project-item">
+												<img src="images/jFrCjPldWBY-HD.jpg" alt="3D Simple Scene">
+												<div class="project-overlay">
+													<div class="project-title-container">
+														<span class="project-title">3D Simple Scene</span>
+													</div>
+													<div class="project-icons">
+														<img src="images\icons8-c-sharp-logo.svg" alt="C#" class="project-icon">
+														<span class="project-tag">Custom Game Engine</span>
+													</div>
+												</div>
+											</a>
+											<a href="https://youtu.be/XamtGO4wrrw" class="project-item">
+												<img src="images/XamtGO4wrrw-HD.jpg" alt="Boids">
+												<div class="project-overlay">
+													<div class="project-title-container">
+														<span class="project-title">Boids</span>
+													</div>
+													<div class="project-icons">
+														<img src="images\icons8-c-sharp-logo.svg" alt="C#" class="project-icon">
+														<span class="project-tag">Custom Game Engine</span>
+													</div>
+												</div>
+											</a>
+											<a href="https://youtu.be/CMgX9auTCI4" class="project-item">
+												<img src="images/CMgX9auTCI4-HD.jpg" alt="2D Enemy AI Pathfinding">
+												<div class="project-overlay">
+													<div class="project-title-container">
+														<span class="project-title">2D Enemy AI Pathfinding</span>
+													</div>
+													<div class="project-icons">
+														<img src="images\icons8-c-sharp-logo.svg" alt="C#" class="project-icon">
+														<span class="project-tag">Custom Game Engine</span>
+													</div>
+												</div>
+											</a>
 										</div>
 									</section>
 								</div>
