Add new personal project

--- a/index.html
+++ b/index.html
@@ -107,6 +107,20 @@
 									<section class="projects">
 										<h2>Personal Projects</h2>
 										<div class="projects-grid">
+											<a href="https://github.com/Stello021/Minesweeper-Tool-UE" class="project-item">
+												<img src="images/Registrazione2025-05-15154555-ezgif.com-video-to-gif-converter.gif" alt="Minesweeper Tool">
+												<div class="project-overlay">
+													<div class="project-title-container">
+														<span class="project-title">Minesweeper Tool</span>
+													</div>
+													<div class="project-icons">
+														<img src="images\cplusplus-svgrepo-com.svg" alt="C++" class="project-icon">
+														<img src="images\unreal-engine-svgrepo-com.svg" alt="Unreal Engine" class="project-icon">
+														<span class="project-tag">Plugin</span>
+														<span class="project-tag">Slate</span>
+													</div>
+												</div>
+											</a>
 											<a href="https://github.com/Stello021/DynamicSidescroller" class="project-item">
 												<img src="images/Camera.gif" alt="Dynamic Sidescroller">
 												<div class="project-overlay">
@@ -182,28 +196,6 @@
 														<span class="project-tag">Gameplay System</span>
 													</div>
 												</div>
-											</a>
-											<!-- <a href="https://youtube.com/shorts/YC0zxm2OZig?feature=share" class="project-item">
-												<img src="images/1667488625876-ezgif.com-video-to-gif-converter.gif" alt="Pytris">
-												<div class="project-overlay">
-													<div class="project-title-container">
-														<span class="project-title">Pytris</span>
-													</div>
-													<div class="project-icons">
-														<img src="images\python-127-svgrepo-com.svg" alt="Python" class="project-icon">
-													</div>
-												</div>
-											</a>
-											<a href="https://youtu.be/7CXLZhIkJug" class="project-item">
-												<img src="images/1667383657109-ezgif.com-video-to-gif-converter.gif" alt="Pyxel Pong">
-												<div class="project-overlay">
-													<div class="project-title-container">
-														<span class="project-title">Pyxel Pong</span>
-													</div>
-													<div class="project-icons">
-														<img src="images\python-127-svgrepo-com.svg" alt="Python" class="project-icon">
-													</div>
-												</div> -->
 											</a>
 											<a href="https://www.youtube.com/watch?v=087ueZO1ZVQ" class="project-item">
 												<img src="images/087ueZO1ZVQ-HD.jpg" alt="2D Simple Dungeon Crawler">
