Add Simple Video Surveillance Management Client project to personal projects section

--- a/index.html
+++ b/index.html
@@ -107,6 +107,19 @@
 									<section class="projects">
 										<h2>Personal Projects</h2>
 										<div class="projects-grid">
+											<a href="#" class="project-item">
+												<img src="images/Screenshot 2025-07-04 175927.png" alt="Simple Video Surveillance Management Client">
+												<div class="project-overlay">
+													<div class="project-title-container">
+														<span class="project-title">Simple Video Surveillance Management Client</span>
+													</div>
+													<div class="project-icons">
+														<img src="images/icons8-c-sharp-logo.svg" alt="C#" class="project-icon">
+														<img src="images/wpf_vector.svg" alt="WPF" class="project-icon">
+														<span class="project-tag">MVVM Software Architecture</span>
+													</div>
+												</div>
+											</a>
 											<a href="https://github.com/Stello021/Minesweeper-Tool-UE" class="project-item">
 												<img src="images/Registrazione2025-05-15154555-ezgif.com-video-to-gif-converter.gif" alt="Minesweeper Tool">
 												<div class="project-overlay">
