Update project link for Simple Video Surveillance Management Client in personal projects section

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 									<section class="projects">
 										<h2>Personal Projects</h2>
 										<div class="projects-grid">
-											<a href="#" class="project-item">
+											<a href="https://github.com/Stello021/Simple-Video-Surveillance-Client" class="project-item">
 												<img src="images/Screenshot 2025-07-04 175927.png" alt="Simple Video Surveillance Management Client">
 												<div class="project-overlay">
 													<div class="project-title-container">
