--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 									<section class="projects">
 										<h2>Personal Projects</h2>
 										<div class="projects-grid">
-											<a href="https://github.com/Stello021/Simple-Video-Surveillance-Client" class="project-item">
+											<!-- <a href="https://github.com/Stello021/Simple-Video-Surveillance-Client" class="project-item">
 												<img src="images/Screenshot 2025-07-04 175927.png" alt="Simple Video Surveillance Management Client">
 												<div class="project-overlay">
 													<div class="project-title-container">
@@ -119,7 +119,7 @@
 														<span class="project-tag">MVVM Software Architecture</span>
 													</div>
 												</div>
-											</a>
+											</a> -->
 											<a href="https://github.com/Stello021/Minesweeper-Tool-UE" class="project-item">
 												<img src="images/Registrazione2025-05-15154555-ezgif.com-video-to-gif-converter.gif" alt="Minesweeper Tool">
 												<div class="project-overlay">
